--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,9 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    len(travel_destinations)"
+    "    len(travel_destinations)\n",
+    "    \n",
+    "    return number_of_destinations"
    ]
   },
   {
