--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +60,22 @@
     "def number_of_destinations():\n",
     "    len(travel_destinations)\n",
     "    \n",
-    "    print(num)"
+    "    print(number_of_destinations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function number_of_destinations at 0x7f1f88059d08>\n"
+     ]
+    }
+   ],
    "source": [
     "number_of_destinations() # 6"
    ]
