--- a/index.ipynb
+++ b/index.ipynb
@@ -58,12 +58,12 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    len(travel_destinations)\n"
+    "   number_of_destinations = len(travel_destinations)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
