Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,21 +52,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    len(travel_destinations)\n",
-    "    return number_of "
+    "    return number_of_destinations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.number_of_destinations()>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_destinations() # 6"
    ]
