--- a/index.ipynb
+++ b/index.ipynb
@@ -205,6 +205,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
+    "    travel_destinations.pop()\n",
+    "    travel_destinations.append('ma')\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
