--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -197,17 +197,17 @@
        "['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "travel_destinations.append('madagascar')\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "travel_destinations[-1] # 'madagascar'\n",
-    "travel_destinations"
+    "travel_destinations[-1] # 'madagascar'"
    ]
   },
   {
