Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,12 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    travel_desti\n",
     "    return travel_destinations.title()"
    ]
   },
