Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "def capitalize_countries():\n",
     "    capitalized_countries[]\n",
     "    for destination in travel_destinations():\n",
-    "        capital\n"
+    "        capitalized_countries.append(travel_destinations.title())\n",
+    "        \n"
    ]
   },
   {
