--- a/index.ipynb
+++ b/index.ipynb
@@ -217,24 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-67-cb2bd9b0e676>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-67-cb2bd9b0e676>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalized_countries[]\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalized_countries[]\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations():\n",
-    "        capitalized_countries.append(travel_destinations.title())\n",
+    "        capitalized_countries.append(destination.title())\n",
     "    return capitalize_countries()\n"
    ]
   },
